--- a/src/css/select-plan.scss
+++ b/src/css/select-plan.scss
@@ -1,7 +1,7 @@
 @use '../css/colors.scss' as *;
 
 .select-plan{
-    // display: block;
+    display: block;
 }
 .plans{
     display: flex;
@@ -14,7 +14,7 @@
     gap: 15px;
 
     .plan-category {
-        height: 150px;
+        height: 175px;
         width: 140px;
         font-size: 15px;
         border: 1px solid $lightGray;
@@ -28,7 +28,7 @@
         div {
             display: flex;
             flex-direction: column;
-            gap: 50px;
+            gap: 25px;
 
             .plan-descrition{
                 gap: 5px;
@@ -38,6 +38,9 @@
 
                 span{
                     color: $coolGray;
+                }
+                .months-free{
+                    color: $marineBlue;
                 }
             }
             img {
